<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map_menu_mode"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/map_mode"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/map_menu_mode_normal"
                android:orderInCategory="1"
                android:title="@string/normal" />

            <item
                android:id="@+id/map_menu_mode_satellite"
                android:orderInCategory="2"
                android:title="@string/satellites" />

            <item
                android:id="@+id/map_menu_mode_terrain"
                android:orderInCategory="3"
                android:title="@string/terrain" />
        </menu>
    </item>

    <item
        android:id="@+id/map_menu_traffic"
        android:icon="@android:drawable/ic_menu_directions"
        android:orderInCategory="2"
        android:title="@string/traffic"
        app:showAsAction="ifRoom" />

</menu>