<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rino.moviedb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_movie_details"
            app:destination="@id/movie_details" />
        <action
            android:id="@+id/action_navigation_home_to_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_history"
            app:destination="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.rino.moviedb.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_ratings"
        android:name="com.rino.moviedb.ui.ratings.RatingsFragment"
        android:label="@string/title_ratings"
        tools:layout="@layout/fragment_ratings" />

    <fragment
        android:id="@+id/movie_details"
        android:name="com.rino.moviedb.ui.details.MovieDetailsFragment"
        android:label="Movie details"
        tools:layout="@layout/fragment_movie_details" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rino.moviedb.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.rino.moviedb.ui.history.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_navigation_history_to_movie_details"
            app:destination="@id/movie_details" />
    </fragment>

</navigation>